--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -11,13 +11,32 @@
 </head>
 <body>
     <header>
-
+        <div>
+            <img src="https://via.placeholder.com/150" alt="logo" id="logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="/">Home</a></li>
+            </ul>
+        </nav>
     </header>
-    <body>
-        
-    </body>
+
     <main>
-        
+       <section id="dataresult">
+<h1>Data Result </h1>
+
+<div id="chart"> </div>
+       </section> 
     </main>
+
+    <footer>
+        <ul>
+            <li><img src="https://via.placeholder.com/90" alt="footer_logo1"></li>
+            <li><img src="https://via.placeholder.com/80" alt="footer_logo2"></li>
+            <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
+        </ul>
+        &copy; Moros-v1 Coropration, All Rights Reserved.
+    </footer>
 </body>
 </html>
