--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
 
-                <li><a href="pages/about-us.html">About Us</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a href="/">Home</a></li>
             </ul>
         </nav>
