--- a/pages/generalinfo.html
+++ b/pages/generalinfo.html
@@ -11,13 +11,57 @@
 </head>
 <body>
     <header>
-
+        <div>
+            <img src="https://via.placeholder.com/150" alt="logo" id="logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="/">Home</a></li>
+            </ul>
+        </nav>
     </header>
-    <body>
-        
-    </body>
+   
     <main>
+        <section class = "vaccineinfo">
+<h1>  About vaccine  </h1>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit laborum eos, dolore, minima quia iure quibusdam nobis distinctio explicabo ad ducimus nostrum! Numquam atque cupiditate unde dolorum nisi rem nesciunt.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, provident voluptatibus eum quasi accusantium esse alias perspiciatis quae in, tempore facilis. Maxime officiis eum odio voluptatum facere rerum ipsa nostrum.
+
+    <img src="https://via.placeholder.com/300" alt="logo" id="logo">
+</p>
+
+
+
+
+        </section>
+
+        <section class ="affects">
+
+<h2> Affects </h2>
+<p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, ex fuga a aliquam, animi hic ea ut cum ratione officia at similique maiores, quia modi! Praesentium tenetur ad voluptas quibusdam!
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut delectus laborum labore assumenda minima esse accusamus ipsa officia ad repellat. Iste, doloribus. Laboriosam, ipsam neque quibusdam dolorem maxime totam impedit.
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</p>
+
+
+
+        </section>
         
     </main>
+    <footer>
+        <ul>
+            <li><img src="https://via.placeholder.com/90" alt="footer_logo1"></li>
+            <li><img src="https://via.placeholder.com/80" alt="footer_logo2"></li>
+            <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
+        </ul>
+        &copy; Moros-v1 Coropration, All Rights Reserved.
+    </footer>
 </body>
 </html>
