quiz function done

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -37,7 +37,10 @@
         </form>
 
 
-
+        <section style="display: none;" id="result">
+            <h1>result</h1>
+            
+        </section>
 
 
     </main>
