finished statistics functionality

--- a/pages/form.html
+++ b/pages/form.html
@@ -37,16 +37,16 @@
                     <option value="60-90" id="age3">60-90</option>
                 </select>
                 <h3>What type of vaccine did you take?</h3>
-                <input type="radio" name='type' id="vaccine" value ="Visor" required>
+                <input type="radio" name='type' id="vaccine" value ="visor" required>
                 <label for="vaccine">Visor</label>
                 <input type="radio" name='type' id="vaccine" value ="estraZeneca" required>
-                <label for="vaccine">Extra Zeneca</label>
-                <input type="radio" name='type' id="vaccine" value ="sinopharm " required>
+                <label for="vaccine">EstraZeneca</label>
+                <input type="radio" name='type' id="vaccine" value ="sinopharm" required>
                 <label for="vaccine">Sinopharm </label>
-                <input type="radio" name='type' id="vaccine" value ="biontech " required>
+                <input type="radio" name='type' id="vaccine" value ="biontech" required>
                 <label for="vaccine">Biontech </label>
               
-                <h3>What is the symptoms you faced?</h3>
+                <h3>What are the symptoms you faced?</h3>
                 <input type="checkbox" id="temperatureRise"  >
                 <label for="temperatureRise">Temperature rise</label>
                 <input type="checkbox" id="musclePain">
