--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
+
 <body>
     <header>
         <div>
@@ -23,11 +25,12 @@
     </header>
 
     <main>
-       <section id="dataresult">
-<h1>Data Result </h1>
+        <section id="dataresult">
+            <h1>Data Result </h1>
 
-<div id="chart"> </div>
-       </section> 
+            <canvas id="ageGroup1Chart" width="200" height="200"></canvas>
+            <canvas id="ageGroup1Chart_circle" width="100" height="100"></canvas>
+        </section>
     </main>
 
     <footer>
@@ -38,5 +41,8 @@
         </ul>
         &copy; Moros-v1 Coropration, All Rights Reserved.
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../js/statistics.js"></script>
 </body>
+
 </html>
