--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
+    
 </head>
 <body>
     <header>
         <div>
-            <img src="https://via.placeholder.com/150" alt="logo" id="logo">
+            <img src="icon/Artboard 1.png" alt="logo" id="logo">
         </div>
         <nav>
             <ul>
-                <li><a href="pages/about-us.html">About Us</a></li>
-                <li><a href="/">Home</a></li>
+                <li><a  href="pages/about-us.html">About Us</a></li>
+                <li><a href="pages/generalinfo.html">General Info</a></li>
+                <li><a href="pages/location.html">Vaccine Centers</a></li>
+                <li><a style="color: #B50717;" href="/">Home</a></li>
             </ul>
         </nav>
+        
     </header>
     <main>
         <section>
@@ -44,10 +48,10 @@
     <footer>
         <ul>
             <li><img src="https://via.placeholder.com/90" alt="footer_logo1"></li>
-            <li><img src="https://via.placeholder.com/80" alt="footer_logo2"></li>
+            <li><img src="icon/helthML.png" alt="footer_logo2"></li>
             <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
         </ul>
-        &copy; Moros-v1 Coropration, All Rights Reserved.
+       <p> &copy; Moros-v1 Coropration, All Rights Reserved.</p>
     </footer>
 </body>
 </html>
