--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -14,12 +14,14 @@
 <body>
     <header>
         <div>
-            <img src="https://via.placeholder.com/150" alt="logo" id="logo">
+            <img src="../icon/Artboard 1.png" alt="logo" id="logo">
         </div>
         <nav>
             <ul>
 
                 <li><a href="about-us.html">About Us</a></li>
+                <li><a href="generalinfo.html">General Info</a></li>
+                <li><a href="location.html">Vaccine Centers</a></li>
                 <li><a href="/">Home</a></li>
             </ul>
         </nav>
@@ -47,11 +49,10 @@
     <footer>
         <ul>
             <li><img src="https://via.placeholder.com/90" alt="footer_logo1"></li>
-            <li><img src="https://via.placeholder.com/80" alt="footer_logo2"></li>
+            <li><img src="../icon/helthML.png" alt="footer_logo2"></li>
             <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
         </ul>
-        &copy; Moros-v1 Coropration, All Rights Reserved.
-    </footer>
+        <p> &copy; Moros-v1 Coropration, All Rights Reserved.</p>    </footer>
     <script src="../js/quiz.js"></script>
 </body>
 
