--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/quiz.css">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
     </header>
 
     <main>
-        <h2>Quiz</h2>
+        <h1>Quiz</h1>
 
 
 
@@ -53,7 +54,9 @@
             <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
         </ul>
         <p> &copy; Moros-v1 Coropration, All Rights Reserved.</p>    </footer>
-    <script src="../js/quiz.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="../js/quiz.js"></script>
+    
 </body>
 
 </html>
