--- a/pages/location.html
+++ b/pages/location.html
@@ -58,11 +58,11 @@
 
     <footer>
         <ul>
-            <li><img src="https://via.placeholder.com/90" alt="footer_logo1"></li>
+            <li><img src="../icon/UN.png" alt="footer_logo1"></li>
             <li><img src="../icon/helthML.png" alt="footer_logo2"></li>
-            <li><img src="https://via.placeholder.com/90" alt="footer_logo3"></li>
+            <li><img src="../icon/WHO.png" alt="footer_logo3"></li>
         </ul>
-        <p> &copy; Moros-v1 Coropration, All Rights Reserved.</p>    </footer>
+        <p> &copy; MOROS-V1 Corporation, All Rights Reserved.</p>       </footer>
 
     <script src="../js/locations.js"></script>
 </body>
