finished locations styling and index cards

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <a href="pages/form.html">
                             <div class="flip-card">
                                 <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="https://via.placeholder.com/512" alt="go to form" id="formButton" class='cardImage'>
+                                    <div class="flip-card-front" id='formButton'>
+
                                     </div>
                                     <div class="flip-card-back">
                                         <h1>Submit Data</h1>
@@ -55,8 +55,8 @@
                         <a href="pages/statistics.html">
                             <div class="flip-card">
                                 <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="https://via.placeholder.com/512" alt="go to statistics" id="statisticsButton" class='cardImage'>
+                                    <div class="flip-card-front" id='statisticsButton'>
+                                        
                                     </div>
                                     <div class="flip-card-back">
                                         <h1>View Statistics</h1>
@@ -70,8 +70,8 @@
                         <a href="pages/quiz.html">
                             <div class="flip-card">
                                 <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <img src="https://via.placeholder.com/512" alt="go to quiz" id="quizButton" class='cardImage'>
+                                    <div class="flip-card-front" id="quizButton">
+                                        
                                     </div>
                                     <div class="flip-card-back">
                                         <h1>Covid Quiz</h1>
