--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <img src="https://via.placeholder.com/100" alt="third member" id="member3">
-                    <h2>Third Member: Omar Nabeel</h2>
+                    <h2>Third Member: Rawnaq Aburumman</h2>
                 </li>
                 <li>
                     <img src="https://via.placeholder.com/100" alt="fourth member" id="member4">
