--- a/pages/location.html
+++ b/pages/location.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <div>
+        <div id='formContainer'>
             <form id="locationForm">
                 <fieldset>
                     <label for="vaccineLocs">Please choose a Province:</label>
@@ -47,7 +47,7 @@
                         <option value="Mafraq">Mafraq</option>
                     </select>
 
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" id='submitButton'>
                 </fieldset>
             </form>
         </div>
