statistics semi done and general is done

--- a/pages/generalinfo.html
+++ b/pages/generalinfo.html
@@ -27,9 +27,9 @@
             </ul>
         </nav>
     </header>
-
+    <img src="../icon/heroGen.png" width="100%">
     <main>
-        <img src="../css/COVID-VACCINES.jpg" class="img2">
+       
 
 
         <section class="benifits">
@@ -61,7 +61,7 @@
 
         </section>
         <hr>
-        <img src="../css/ebra.jpeg" width="100%">
+        <img src="" width="100%">
         <hr>
         <section class="benifits">
 
