semi done styling aboutus page

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,9 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
 </head>
+
 <body>
     <header>
         <div>
@@ -24,34 +27,83 @@
         </nav>
     </header>
     <main>
-        <h1>Our Amazing Team</h1>
+        <section id='heroContainer'>
+            <!-- <img src="https://via.placeholder.com/1024x512" alt="hero"> -->
+        </section>
+        <h1>Our Amazing Team:</h1>
+        <div class="flip-card" id='leaderContainer'>
+            <div class="flip-card-inner">
+                <div class="flip-card-front" id='leader'>
+
+                </div>
+                <div class="flip-card-back">
+                    <h1>Team Leader:</h1>
+                    <p>Musa'b Shalaldeh</p>
+                </div>
+            </div>
+        </div>
         <section>
-            <ul>
+            <ul id='teamList'>
+                <!-- <li>
+                    <
+                </li> -->
                 <li>
-                    <img src="https://via.placeholder.com/100" alt="leader" id="leader">
-                    <h2>Team Leader: Musa'b Shalaldeh</h2>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front" id='member1'>
+
+                            </div>
+                            <div class="flip-card-back">
+                                <h1>First Member:</h1>
+                                <p>Oqla alrefai</p>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <img src="https://via.placeholder.com/100" alt="first member" id="member1">
-                    <h2>First Member: Oqla alrefai</h2>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front" id='member2'>
+
+                            </div>
+                            <div class="flip-card-back">
+                                <h1>Second Member:</h1>
+                                <p>Samah hamed</p>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <img src="https://via.placeholder.com/100" alt="second member" id="member2">
-                    <h2>Second Member: Samah hamed</h2>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front" id='member3'>
+
+                            </div>
+                            <div class="flip-card-back">
+                                <h1>Third Member:</h1>
+                                <p>Rawnaq Aburumman</p>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <img src="https://via.placeholder.com/100" alt="third member" id="member3">
-                    <h2>Third Member: Rawnaq Aburumman</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/100" alt="fourth member" id="member4">
-                    <h2>Fourth Member: Omar Nabeel</h2>
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front" id='member4'>
+
+                            </div>
+                            <div class="flip-card-back">
+                                <h1>Fourth Member:</h1>
+                                <p>Omar Nabeel</p>
+                            </div>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </section>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus delectus similique distinctio consectetur dignissimos, unde molestias cupiditate voluptas, at esse praesentium saepe reiciendis consequatur tenetur quo harum, voluptate beatae accusamus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum, voluptate voluptates similique consequuntur corporis sit quos ut. Earum error harum, deserunt explicabo laboriosam, porro cumque voluptas dolor tempora praesentium illum!
-        </p>
+        <div id='fbContainer'>
+            <a href="feedback.html" id='feedbackButton'>Give Feedback</a>
+        </div>
     </main>
     <footer>
         <ul>
@@ -59,6 +111,8 @@
             <li><img src="../icon/helthML.png" alt="footer_logo2"></li>
             <li><img src="../icon/WHO.png" alt="footer_logo3"></li>
         </ul>
-        <p> &copy; MOROS-V1 Corporation, All Rights Reserved.</p>    </footer>
+        <p> &copy; MOROS-V1 Corporation, All Rights Reserved.</p>
+    </footer>
 </body>
+
 </html>
