--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="pages/about-us.html">About Us</a></li>
+                <li><a style="color: #B50717;" href="#">Home</a></li>
                 <li><a href="pages/generalinfo.html">General Info</a></li>
                 <li><a href="pages/location.html">Vaccine Centers</a></li>
-                <li><a style="color: #B50717;" href="/">Home</a></li>
+                <li><a href="pages/profile.html">Profiles</a></li>
+                <li><a href="pages/about-us.html">About Us</a></li>
             </ul>
         </nav>
 
