--- a/pages/form.html
+++ b/pages/form.html
@@ -104,8 +104,8 @@
                         <input type="checkbox" class="checkbox" id="jointPain">
                         <label for="jointPain">Joint pain</label>
                         <br>
-                        <input type="checkbox" class="checkbox" id="sensitivityOrShortnessOfBreath">
-                        <label for="sensitivityOrShortnessOfBreath">Sensitivity Or Shortness Of Breath</label>
+                        <input type="checkbox" class="checkbox" id="Dyspnea">
+                        <label for="Dyspnea">Sensitivity Or Shortness Of Breath</label>
                         <br>
                     </div>
                     </br>
