--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -18,11 +18,11 @@
         </div>
         <nav>
             <ul>
-
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="../">Home</a></li>
                 <li><a href="generalinfo.html">General Info</a></li>
                 <li><a href="location.html">Vaccine Centers</a></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="profile.html">Profiles</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </nav>
     </header>
