--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -20,10 +20,10 @@
         <nav>
             <ul>
                 <li><a href="../">Home</a></li>
-                <li><a href="../pages/generalinfo.html">General Info</a></li>
-                <li><a href="../pages/location.html">Vaccine Centers</a></li>
-                <li><a href="../pages/profile.html">Profiles</a></li>
-                <li><a style="color: #B50717;" href="../pages/about-us.html">About Us</a></li>
+                <li><a href="generalinfo.html">General Info</a></li>
+                <li><a href="location.html">Vaccine Centers</a></li>
+                <li><a href="profile.html">Profiles</a></li>
+                <li><a style="color: #B50717;" href="about-us.html">About Us</a></li>
             </ul>
         </nav>
     </header>
