--- a/pages/location.html
+++ b/pages/location.html
@@ -19,10 +19,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="../">Home</a></li>
                 <li><a href="generalinfo.html">General Info</a></li>
                 <li><a style="color: #B50717;" href="location.html">Vaccine Centers</a></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="profile.html">Profiles</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </nav>
     </header>
