header and footer are done

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-            <img src="../icon/Artboard 1.png" alt="logo" id="logo">
+            <img src="../icon/logo-small.png" alt="logo" id="logo">
         </div>
         <nav>
             <ul>
