--- a/pages/location.html
+++ b/pages/location.html
@@ -15,13 +15,13 @@
 <body>
     <header>
         <div>
-            <img src="../icon/Artboard 1.png" alt="logo" id="logo">
+            <img src="../icon/logo-small.png" alt="logo" id="logo">
         </div>
         <nav>
             <ul>
                 <li><a href="../">Home</a></li>
                 <li><a href="generalinfo.html">General Info</a></li>
-                <li><a style="color: #B50717;" href="location.html">Vaccine Centers</a></li>
+                <li><a style="color: #2267A5; font-weight: 1000;" href="location.html">Vaccine Centers</a></li>
                 <li><a href="profile.html">Profiles</a></li>
                 <li><a href="about-us.html">About Us</a></li>
             </ul>
