finishing profile and header

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <img src="../icon/heroQuiz.png" alt="Quiz hero">
+        <img src="../icon/quzHero.png" alt="Quiz hero">
 
 
 
