--- a/pages/profile.html
+++ b/pages/profile.html
@@ -15,6 +15,7 @@
     <header>
         <div>
             <img src="../icon/logo-small.png" alt="logo" id="logo">
+            <h1>MOROS COVID-19 VACCINE TRACKER </h1>
         </div>
         <nav>
             <ul>
@@ -27,10 +28,11 @@
         </nav>
     </header>
     <main>
-        <img src="../icon/heroProfile.png" alt="profile hero">
+        
         <h1>Profiles</h1>
         <div id= 'sideBar'></div>
         <section id="profile"></section>
+        
     </main>
     <footer>
 
