--- a/pages/form.html
+++ b/pages/form.html
@@ -37,7 +37,7 @@
 
                     <div id="name">
                         <label for="fullname">Full Name:</label><br>
-                        <input type="text" id="fullname" name="fullname"value='fullname'>
+                        <input type="text" id="fullname" name="fullname"value=''>
                     </div><br>
 
                     <div>
@@ -123,8 +123,9 @@
         </section>
 
         <section id='contact'>
-            <h2>Contact information</h2>
+            
             <section>
+                <h2>Contact information</h2>
                 <div>
                     <img id="log" src="../icon/Facebook.png">
                     <p>facebook account</p>
