--- a/pages/generalinfo.html
+++ b/pages/generalinfo.html
@@ -20,19 +20,16 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../">Home</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a style="color: #B50717;" href="generalinfo.html">General Info</a></li>
                 <li><a href="location.html">Vaccine Centers</a></li>
-                <li><a href="profile.html">Profiles</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="/">Home</a></li>
             </ul>
         </nav>
     </header>
-    <img src="../icon/heroGen.png" width="100%">
+    <img src="../icon/heroGeneral.png" width="100%">
     <main>
        
-
-
         <section class="benifits">
 
             <h2 class="headerbenifites"> Benefits of Covid Vaccine 19 </h2>
@@ -176,30 +173,6 @@
 
 
             </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     </main>
