--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -29,7 +29,7 @@
         </nav>
    
     </header>
-    <img src="../icon/heroChart.png " width="100%" >
+    <img src="../icon/statHero.png " width="100%" >
     <main>
         <section id="dataresult">
            
