--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 </head>
 
-<body><section id='heroContainer'></section>
+<body>
+    <section id='heroSection'>
+        <section id='heroContainer'></section>
+    </section>
     <header>
         <div>
             <img src="icon/logo-small.png" alt="logo" id="logo">
@@ -30,11 +33,11 @@
 
     </header>
     <main>
-        
-            <!-- <img src="https://via.placeholder.com/1024x512" alt="hero"> -->
+
+        <!-- <img src="https://via.placeholder.com/1024x512" alt="hero"> -->
         </section>
         <section id='cardsSection'>
-            <h1>Input your data, view statistics or take a quiz!</h1>
+            <h1 class="pAnim">Input your data, view statistics or take a quiz!</h1>
             <div>
                 <ul>
                     <li>
@@ -86,19 +89,126 @@
                     </li>
                 </ul>
             </div>
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam rerum dolor at, assumenda itaque
-                tempore minus nemo officiis quam molestias in odit cupiditate dicta qui ea reprehenderit autem
-                quibusdam.
-                Nihil tenetur quidem quia deserunt tempora odit adipisci ex, aut et esse accusamus exercitationem
-                placeat quaerat, voluptates delectus, sunt est! Tenetur reiciendis quae exercitationem saepe ullam
-                asperiores nam quas molestias.
-                Vel repellendus corrupti modi explicabo, dolorum quos dolore corporis pariatur, debitis at sunt
-                consequuntur numquam libero aperiam sequi tenetur et officiis ducimus. Reprehenderit accusamus aliquid
-                consectetur repellendus facilis quam perspiciatis!
-            </p>
         </section>
+        <p id="m_firstP" class="pAnim">
+            Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they
+            come into contact with them. It uses your body’s natural defenses to build resistance to specific infections
+            and makes your immune system stronger.
+
+            Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.
+            However, because vaccines contain only killed or weakened forms of germs like viruses or bacteria, they do
+            not cause the disease or put you at risk of its complications.
+
+            Most vaccines are given by an injection, but some are given orally (by mouth) or sprayed into the nose.
+        </p>
+        <hr>
+        <section id='m_secondSection'>
+            <div id='m_s_image'>
+
+            </div>
+            <div id='m_p_container' class="pAnim">
+                <h1>Why is vaccination important?</h1>
+                <p>
+                    Vaccination is a safe and effective way to prevent disease and save lives – now more than ever.
+                    Today there are vaccines available to protect against at least 20 diseases, such as diphtheria,
+                    tetanus, pertussis, influenza and measles. Together, these vaccines save the lives of up to 3
+                    million people every year.
+
+                    When we get vaccinated, we aren’t just protecting ourselves, but also those around us. Some people,
+                    like those who are seriously ill, are advised not to get certain vaccines – so they depend on the
+                    rest of us to get vaccinated and help reduce the spread of disease.
+
+                    During the COVID-19 pandemic, vaccination continues to be critically important. The pandemic has
+                    caused a decline in the number of children receiving routine immunizations, which could lead to an
+                    increase in illness and death from preventable diseases. WHO has urged countries to ensure that
+                    essential immunization and health services continue, despite the challenges posed by COVID-19.More
+                    information about the importance of vaccines is available here.
+                </p>
+            </div>
+        </section>
+        <hr>
+        <section id='m_thirdSection'>
+            <div id='marker'>
+
+            </div>
+            <div id='m_thirdSectionText' class="pAnim">
+                <h1>
+                    Lorem!
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, perferendis? Sint placeat amet natus
+                    magnam? Cumque porro possimus beatae, nulla expedita necessitatibus vitae natus cupiditate consequatur.
+                    Temporibus distinctio quo beatae.
+                    Ipsum, placeat ea eveniet nulla quos iure eius, magni ad obcaecati atque nemo nesciunt sequi tenetur
+                    assumenda facere ipsa mollitia accusamus neque? Facere amet ut perspiciatis excepturi tenetur magnam
+                    nobis.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus in nihil cum aut esse hic itaque nostrum eveniet eos minima, et atque consequuntur ex. Nemo unde quo voluptatibus beatae.
+                </p>
+            </div>
+            <div id='m_thirdSectionCards'>
+                <ul>
+                    <li id='d_s_1' class="pAnim">
+                        <div>
+                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <h1 class="d_s_3_h1">
+                                lorem
+                            </h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                            </p>
+                        </div>
+                    </li>
+                    <li id='d_s_2' class="pAnim">
+                        <div>
+                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <h1 class="d_s_3_h1">
+                                lorem
+                            </h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                            </p>
+                        </div>
+                    </li>
+                    <li id='d_s_3' class="pAnim">
+                        <div>
+                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <h1 class="d_s_3_h1">
+                                lorem
+                            </h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <hr>
+        <section id='m_fourthSection'>
+            <div id="m_four_text">
+                <h1>
+                    Frequently Asked Questions:
+                </h1>
+                <div id='FAQcontainer'>
+
+                </div>
+            </div>
+            <div id='m_four_news'>
+                <div class="news">
+                    <img src="https://via.placeholder.com/256x256" alt="">
+                    <div>
+                        <h1>
+                            lorem
+                        </h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <hr>
     </main>
     <footer>
         <ul>
@@ -108,6 +218,7 @@
         </ul>
         <p> &copy; MOROS-V1 Corporation, All Rights Reserved.</p>
     </footer>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
