--- a/pages/profile.html
+++ b/pages/profile.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         
-        <h1>Profiles</h1>
+        <img src="../icon/profileHero.png" id='hero'>
         <div id= 'sideBar'></div>
         <section id="profile"></section>
         
