--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -46,7 +46,7 @@
              <label for = "Textfield"> Write your feedback 😍: </label>
              <input type = "text" id ='feedbacktext'  required >
              
-             <div class="faces"> <img src="https://img.icons8.com/emoji/48/000000/angry-face-emoji--v2.png" /> <img src="https://img.icons8.com/fluent/48/000000/sad.png" /> <img src="https://img.icons8.com/color/48/000000/happy.png" /> <img src="https://img.icons8.com/emoji/48/000000/smiling-face.png" /> <img src="https://img.icons8.com/color/48/000000/lol.png" /> </div>
+             <div class="faces"> <img class ="emoji" src="https://img.icons8.com/emoji/48/000000/angry-face-emoji--v2.png" /> <img  class ="emoji"  src="https://img.icons8.com/fluent/48/000000/sad.png" /> <img  class ="emoji"  src="https://img.icons8.com/color/48/000000/happy.png" /> <img class ="emoji"   src="https://img.icons8.com/emoji/48/000000/smiling-face.png" /> <img  class ="emoji"  src="https://img.icons8.com/color/48/000000/lol.png" /> </div>
              <button type= 'submit' class="bitt"> Send </button>
             </fieldset>
             </form>
