--- a/pages/generalinfo.html
+++ b/pages/generalinfo.html
@@ -17,11 +17,12 @@
     <header>
         <div>
             <img src="../icon/logo-small.png" alt="logo" id="logo">
+            <h1>MOROS COVID-19 VACCINE TRACKER </h1>
         </div>
         <nav>
             <ul>
                 <li><a href="../">Home</a></li>
-                <li><a style="color: #2267A5 href="generalinfo.html">General Info</a></li>
+                <li><a style="color: #2267A5; font-weight: 1000;" href="generalinfo.html">General Info</a></li>
                 <li><a href="location.html">Vaccine Centers</a></li>
                 <li><a href="profile.html">Profiles</a></li>
                 <li><a href="about-us.html">About Us</a></li>
@@ -33,7 +34,7 @@
        
         <section class="benifits">
 
-            <h2 class="headerbenifites"> Benefits of Covid Vaccine 19 </h2>
+            <h2 class="headerbenifites"> Benefits of Covid-19 Vaccine</h2>
             <p>
 
                 COVID-19 vaccines were developed to target the Al-Hasakah protein before
