--- a/pages/profile.html
+++ b/pages/profile.html
@@ -33,6 +33,9 @@
         <div id= 'sideBar'></div>
         <section id="profile"></section>
         
+        <div id='whiteSpace'>
+
+        </div>
     </main>
     <footer>
 
