--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <header>
         <div>
             <img src="icon/logo-small.png" alt="logo" id="logo">
+            <h1>MOROS COVID-19 VACCINE TRACKER </h1>
         </div>
         <nav>
             <ul>
@@ -90,17 +91,20 @@
                 </ul>
             </div>
         </section>
-        <p id="m_firstP" class="pAnim">
-            Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they
-            come into contact with them. It uses your body’s natural defenses to build resistance to specific infections
-            and makes your immune system stronger.
-
-            Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.
-            However, because vaccines contain only killed or weakened forms of germs like viruses or bacteria, they do
-            not cause the disease or put you at risk of its complications.
-
-            Most vaccines are given by an injection, but some are given orally (by mouth) or sprayed into the nose.
-        </p>
+        <div id='m_firstP_container' class="pAnim">
+            <h1>What is vaccination ?</h1>
+            <p id="m_firstP">
+                Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they
+                come into contact with them. It uses your body’s natural defenses to build resistance to specific infections
+                and makes your immune system stronger.
+    
+                Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.
+                However, because vaccines contain only killed or weakened forms of germs like viruses or bacteria, they do
+                not cause the disease or put you at risk of its complications.
+    
+                Most vaccines are given by an injection, but some are given orally (by mouth) or sprayed into the nose.
+            </p>
+        </div>
         <hr>
         <section id='m_secondSection'>
             <div id='m_s_image'>
@@ -133,50 +137,44 @@
             </div>
             <div id='m_thirdSectionText' class="pAnim">
                 <h1>
-                    Lorem!
+                    Takecare!
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, perferendis? Sint placeat amet natus
-                    magnam? Cumque porro possimus beatae, nulla expedita necessitatibus vitae natus cupiditate consequatur.
-                    Temporibus distinctio quo beatae.
-                    Ipsum, placeat ea eveniet nulla quos iure eius, magni ad obcaecati atque nemo nesciunt sequi tenetur
-                    assumenda facere ipsa mollitia accusamus neque? Facere amet ut perspiciatis excepturi tenetur magnam
-                    nobis.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ducimus in nihil cum aut esse hic itaque nostrum eveniet eos minima, et atque consequuntur ex. Nemo unde quo voluptatibus beatae.
+                    The human coronavirus is commonly spread through respiratory droplets in the air from a sick person, close personal contact, or by touching a surface with the virus on it. You can take steps to protect yourself and prevent the spread of the virus by washing your hands often, not touching your face, cleaning frequently touched surfaces, avoiding close contact with sick people, and practicing good respiratory hygiene.
                 </p>
             </div>
             <div id='m_thirdSectionCards'>
                 <ul>
                     <li id='d_s_1' class="pAnim">
                         <div>
-                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <img src="icon/washingHands.jpg" alt="washing hands">
                             <h1 class="d_s_3_h1">
-                                lorem
+                                Clean your hands
                             </h1>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                                Wash your hands regularly with soap and water for at least 20 seconds,* says HealthLink BC. If soap and water aren’t readily available, use a hand sanitizer that contains at least 60% alcohol. Cleaning your hands often helps to lower your risk of infection and reduce the spread of infection to others.
                             </p>
                         </div>
                     </li>
                     <li id='d_s_2' class="pAnim">
                         <div>
-                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <img src="icon/nofacetouch.png" alt="no face touching">
                             <h1 class="d_s_3_h1">
-                                lorem
+                                Avoid touching your face
                             </h1>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                                Take special care not to touch your eyes, nose, and mouth with unwashed hands, since these are the most likely ways for the virus to enter your body.
                             </p>
                         </div>
                     </li>
                     <li id='d_s_3' class="pAnim">
                         <div>
-                            <img src="https://via.placeholder.com/256x256" alt="">
+                            <img src="icon/stayhome.jpg" alt="stay in">
                             <h1 class="d_s_3_h1">
-                                lorem
+                                Stay in, if you feel sick
                             </h1>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea animi obcaecati laboriosam tempora doloribus sit unde fuga iure, quod odio laudantium ad ducimus incidunt minima veniam, iusto itaque. Sunt, doloremque?
+                                Avoid close contact with others if you feel unwell. If you have a cough or fever, seek medical attention.
                             </p>
                         </div>
                     </li>
@@ -190,11 +188,21 @@
                     Frequently Asked Questions:
                 </h1>
                 <div id='FAQcontainer'>
-
+                    <!-- <div class="FAQ">
+                        <h2>
+                            - Who can get vaccinated ?
+                        </h2>
+                        <p>
+                            Nearly everyone can get vaccinated. However, because of some medical conditions, some people should not get certain vaccines, or should wait before getting them.
+                        </p>
+                    </div> -->
                 </div>
             </div>
             <div id='m_four_news'>
-                <div class="news">
+                <h1 id ='latestNews'>
+                    Latest News:
+                </h1>
+                <!-- <div class="news">
                     <img src="https://via.placeholder.com/256x256" alt="">
                     <div>
                         <h1>
@@ -204,11 +212,15 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </p>
                     </div>
-                </div>
+                </div> -->
+
             </div>
 
         </section>
         <hr>
+        <div id="whiteSpace">
+
+        </div>
     </main>
     <footer>
         <ul>
