--- a/pages/form.html
+++ b/pages/form.html
@@ -17,6 +17,7 @@
     <header>
         <div>
             <img src="../icon/logo-small.png" alt="logo" id="logo">
+            <h1>MOROS COVID-19 VACCINE TRACKER </h1>
         </div>
         <nav>
             <ul>
