--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -16,6 +16,7 @@
     <header>
         <div>
             <img src="../icon/logo-small.png" alt="logo" id="logo">
+            <h1>MOROS COVID-19 VACCINE TRACKER </h1>
         </div>
         <nav>
             <ul>
